# convergent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  security.yml
benches/: intent_graph.rs
dev/bench/python/: data.js
dev/bench/rust/: data.js
docs/: WHITEPAPER.md
python/convergent/: __init__.py  __main__.py  _serialization.py  agent.py  async_backend.py  benchmark.py  codegen_demo.py  constraints.py  contract.py  coordination_config.py  cross_platform.py  cycles.py  demo.py  economics.py  event_log.py  flocking.py  gates.py  gorgon_bridge.py  governor.py  health.py  intent.py  matching.py  protocol.py  replay.py  resolver.py  rust_backend.py  score_store.py  scoring.py  semantic.py  signal_backend.py  signal_bus.py  sqlite_backend.py  sqlite_signal_backend.py  stigmergy.py  training.py  triumvirate.py  versioning.py  visualization.py
scripts/: smoke_test_llm.py
src/: graph.rs  lib.rs  matching.rs  models.rs  stability.rs
tests/: test_async_backend.py  test_benchmark_gates_demo.py  test_benchmarks.py  test_cli.py  test_contract.py  test_convergence.py  test_coverage_push.py  test_cross_platform.py  test_cycles.py  test_delegation_factory.py  test_event_log.py  test_flocking.py  test_gorgon_bridge.py  test_health.py  test_hooks.py  test_protocol.py  test_rust_backend.py  test_scoring.py  test_semantic.py  test_signal_backend.py  test_signal_bus.py  test_sqlite_backend.py  test_sqlite_signal_backend.py  test_stigmergy.py  test_three_layer.py  test_training.py  test_triumvirate.py  test_visualization.py
